--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Übersicht</title>
 </head>
 <body>
-    <a href="Assessments/index.html">Assessments</a>
-    <a href="Whiteboard/index.html">Whiteboard</a>
+    <a href="./assessments/index.html">Assessments</a>
+    <a href="./whiteboard/index.html">Whiteboard</a>
 </body>
 </html>
