--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Übersicht</title>
 </head>
+
 <body>
-    <a href="./assessments/index.html">Assessments</a>
-    <a href="./whiteboard/index.html">Whiteboard</a>
+    <h1>Übersicht</h1>
+    <ol>
+        <li><a href="./assessments/index.html">Assessments</a></li>
+        <li><a href="./whiteboard/index.html">Whiteboard</a></li>
+    </ol>
 </body>
+
 </html>
