--- a/whiteboard/index.html
+++ b/whiteboard/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Whiteboard</title>
 </head>
+
 <body>
-    <iframe src="https://excalidraw.com/" frameborder="0"></iframe>
+    <iframe src="https://excalidraw.com/#room=2c4fcc5b6ae306a25319,FAPV7_LaI0il089ny2fMNQ" frameborder="0"></iframe>
 </body>
+
 </html>
