--- a/goals/index.html
+++ b/goals/index.html
@@ -8,13 +8,12 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
-    <title>Whiteboard</title>
+    <title>Goals</title>
 </head>
 
 <body>
-    <!-- <iframe src="https://excalidraw.com/#room=2c4fcc5b6ae306a25319,FAPV7_LaI0il089ny2fMNQ" frameborder="0"></iframe> -->
-    <img
-        src="https://docs.google.com/drawings/d/e/2PACX-1vScHmF7xcd8vtLQXsl_1YGzYuZqv3Ds5A0T1ldp16WjOS4yKli8aBZeFI-qKgIrPPLx9jO_7fbuU2b4/pub?w=1440&amp;h=1080">
+    <img src="https://docs.google.com/drawings/d/e/2PACX-1vScHmF7xcd8vtLQXsl_1YGzYuZqv3Ds5A0T1ldp16WjOS4yKli8aBZeFI-qKgIrPPLx9jO_7fbuU2b4/pub?w=1440&amp;h=1080"
+        frameborder="1">
 </body>
 
 </html>
