--- a/goals/index.html
+++ b/goals/index.html
@@ -13,7 +13,17 @@
 
 <body>
     <img src="https://docs.google.com/drawings/d/e/2PACX-1vScHmF7xcd8vtLQXsl_1YGzYuZqv3Ds5A0T1ldp16WjOS4yKli8aBZeFI-qKgIrPPLx9jO_7fbuU2b4/pub?w=1440&amp;h=1080"
-        frameborder="1">
+        frameborder="1" />
+    <style>
+        img {
+            height: 100vh;
+            width: 100vw;
+            /* position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%); */
+        }
+    </style>
 </body>
 
 </html>
