--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Übersicht</h1>
     <ol>
         <li><a href="./assessments/index.html">Assessments</a></li>
-        <li><a href="./whiteboard/index.html">Whiteboard</a></li>
+        <li><a href="./goals/index.html">Goals</a></li>
     </ol>
 </body>
 
