--- a/goals/index.html
+++ b/goals/index.html
@@ -16,12 +16,12 @@
         frameborder="1" />
     <style>
         img {
-            height: 100vh;
-            width: 100vw;
-            /* position: absolute;
+            height: 100%;
+            width: 100%;
+            position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%, -50%); */
+            transform: translate(-50%, -50%);
         }
     </style>
 </body>
