--- a/goals/index.html
+++ b/goals/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <img src="https://docs.google.com/drawings/d/e/2PACX-1vScHmF7xcd8vtLQXsl_1YGzYuZqv3Ds5A0T1ldp16WjOS4yKli8aBZeFI-qKgIrPPLx9jO_7fbuU2b4/pub?w=1440&amp;h=1080"
-        frameborder="1" />
+        alt="Goals" />
     <style>
         img {
             height: 100%;
